Web Application with EC2/igw.tf
resource "aws_internet_gateway" "internet-gw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "my-igw" 
  }
}
